{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 109,
  "lineage": "ebaadca3-c865-25e6-10bc-ef46f5de92c2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018d291ca9ffc002f",
            "arn": "arn:aws:ec2:us-west-1:639734036379:instance/i-0f1603ed8ad9fa999",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1603ed8ad9fa999",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mainc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef84771c5d7d1bc7",
            "private_dns": "ip-10-0-1-60.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a55f643759de8f43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042b18a742f2f407f",
            "tags": {
              "Name": "LL-TEST-EC2-PRIVATE"
            },
            "tags_all": {
              "Name": "LL-TEST-EC2-PRIVATE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00dd552e9f58e714c"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.allow_ssh_pub",
            "module.networking.aws_subnet.privatesubnet1",
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018d291ca9ffc002f",
            "arn": "arn:aws:ec2:us-west-1:639734036379:instance/i-09f95407a3dfb101f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f95407a3dfb101f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mainc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ee8843021ed1e73",
            "private_dns": "ip-10-0-101-109.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.109",
            "public_ip": "54.183.175.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02514bb780d7b8c78",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7dff0a2dfae7b09",
            "tags": {
              "Name": "LL-TEST-EC2-PUBLIC"
            },
            "tags_all": {
              "Name": "LL-TEST-EC2-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00dd552e9f58e714c"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.allow_ssh_pub",
            "module.networking.aws_subnet.publicsubnet1",
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb2e2afa4908cb4e",
            "domain": "vpc",
            "id": "eipalloc-0eb2e2afa4908cb4e",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-52-130-152.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.130.152",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:internet-gateway/igw-0e4d47a790dabc7e7",
            "id": "igw-0e4d47a790dabc7e7",
            "owner_id": "639734036379",
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "dependencies": [
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb2e2afa4908cb4e",
            "connectivity_type": "public",
            "id": "nat-0fa7cdffee58ddf00",
            "network_interface_id": "eni-066b70d2376f10c0b",
            "private_ip": "10.0.101.50",
            "public_ip": "13.52.130.152",
            "subnet_id": "subnet-0a7dff0a2dfae7b09"
          },
          "dependencies": [
            "module.networking.aws_eip.nateIP",
            "module.networking.aws_subnet.publicsubnet1",
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:route-table/rtb-0f8b1673bce4ab167",
            "id": "rtb-0f8b1673bce4ab167",
            "owner_id": "639734036379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa7cdffee58ddf00",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nateIP",
            "module.networking.aws_nat_gateway.NATgw",
            "module.networking.aws_subnet.publicsubnet1",
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:route-table/rtb-04738538adad3ff7c",
            "id": "rtb-04738538adad3ff7c",
            "owner_id": "639734036379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4d47a790dabc7e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.IGW",
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccbad5382f63d93c",
            "route_table_id": "rtb-0f8b1673bce4ab167",
            "subnet_id": "subnet-042b18a742f2f407f"
          },
          "dependencies": [
            "module.networking.aws_eip.nateIP",
            "module.networking.aws_nat_gateway.NATgw",
            "module.networking.aws_route_table.PrivateRT",
            "module.networking.aws_subnet.privatesubnet1",
            "module.networking.aws_subnet.publicsubnet1",
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca42792c855f46f7",
            "route_table_id": "rtb-04738538adad3ff7c",
            "subnet_id": "subnet-0a7dff0a2dfae7b09"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.IGW",
            "module.networking.aws_route_table.PublicRT",
            "module.networking.aws_subnet.publicsubnet1",
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:security-group/sg-00dd552e9f58e714c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dd552e9f58e714c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LL-TEST-allow_ssh",
            "name_prefix": "",
            "owner_id": "639734036379",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:subnet/subnet-042b18a742f2f407f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042b18a742f2f407f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639734036379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "dependencies": [
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:subnet/subnet-0ca8657a494e563df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca8657a494e563df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639734036379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "dependencies": [
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:subnet/subnet-0a7dff0a2dfae7b09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7dff0a2dfae7b09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639734036379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "dependencies": [
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:subnet/subnet-020b72ea5c06a4f1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020b72ea5c06a4f1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639734036379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05907116cb9f2bb58"
          },
          "dependencies": [
            "module.networking.aws_vpc.LL-TEST-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LL-TEST-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:639734036379:vpc/vpc-05907116cb9f2bb58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d99e3abd8533bc3",
            "default_route_table_id": "rtb-0093cbaece7c2082d",
            "default_security_group_id": "sg-0433d958970d07dbe",
            "dhcp_options_id": "dopt-0eb5b867a396387b8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05907116cb9f2bb58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0093cbaece7c2082d",
            "owner_id": "639734036379"
          }
        }
      ]
    }
  ]
}